welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:5: error: value ++ is not a member of Int
		i++;
                 ^