welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
	var i:Int = 0;
	while(!estSurBiscuit()) {
		avance()
		i++;
	}
	prendBiscuit()
	for(j <- 0 to i) {
		recule()
	}
	poseBiscuit()
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}
